--- a/Manuscript/PTMsMODaBibliography.bib
+++ b/Manuscript/PTMsMODaBibliography.bib
@@ -1,11 +1,358 @@
+
+@article{Abramsetal1981,
+   Author = {Abrams, W. R. and Weinbaum, G. and Weissbach, L. and Weissbach, H. and Brot, N.},
+   Title = {Enzymatic reduction of oxidized alpha-1-proteinase inhibitor restores biological activity},
+   Journal = {Proc Natl Acad Sci U S A},
+   Volume = {78},
+   Number = {12},
+   Pages = {7483-6},
+   Year = {1981} }
+
+@article{Bernetal2012,
+   Author = {Bern, M. and Kil, Y. J. and Becker, C.},
+   Title = {Byonic: advanced peptide and protein identification software},
+   Journal = {Curr Protoc Bioinformatics},
+   Volume = {Chapter 13},
+   Pages = {Unit13 20},
+   Year = {2012} }
+
+@article{Brotetal1981,
+   Author = {Brot, N. and Weissbach, L. and Werth, J. and Weissbach, H.},
+   Title = {Enzymatic reduction of protein-bound methionine sulfoxide},
+   Journal = {Proc Natl Acad Sci U S A},
+   Volume = {78},
+   Number = {4},
+   Pages = {2155-8},
+   Year = {1981} }
+
+@article{Charbautetal2002,
+   Author = {Charbaut, E. and Redeker, V. and Rossier, J. and Sobel, A.},
+   Title = {N-terminal acetylation of ectopic recombinant proteins in Escherichia coli},
+   Journal = {FEBS Lett},
+   Volume = {529},
+   Number = {2-3},
+   Pages = {341-5},
+   Year = {2002} }
+
+@article{CraigBeavis2004,
+   Author = {Craig, R. and Beavis, R. C.},
+   Title = {TANDEM: matching proteins with tandem mass spectra},
+   Journal = {Bioinformatics},
+   Volume = {20},
+   Number = {9},
+   Pages = {1466-7},
+   Year = {2004} }
+
+@article{Dasarietal2010,
+   Author = {Dasari, S. and Chambers, M. C. and Slebos, R. J. and Zimmerman, L. J. and Ham, A. J. and Tabb, D. L.},
+   Title = {TagRecon: high-throughput mutation identification through sequence tagging},
+   Journal = {J Proteome Res},
+   Volume = {9},
+   Number = {4},
+   Pages = {1716-26},
+   Year = {2010} }
+
+@article{Davisetal2000,
+   Author = {Davis, D. A. and Newcomb, F. M. and Moskovitz, J. and Wingfield, P. T. and Stahl, S. J. and Kaufman, J. and Fales, H. M. and Levine, R. L. and Yarchoan, R.},
+   Title = {HIV-2 protease is inactivated after oxidation at the dimer interface and activity can be partly restored with methionine sulphoxide reductase},
+   Journal = {Biochem J},
+   Volume = {346 Pt 2},
+   Pages = {305-11},
+   Year = {2000} }
+
+@article{Driessenetal1985,
+   Author = {Driessen, H. P. and de Jong, W. W. and Tesser, G. I. and Bloemendal, H.},
+   Title = {The mechanism of N-terminal acetylation of proteins},
+   Journal = {CRC Crit Rev Biochem},
+   Volume = {18},
+   Number = {4},
+   Pages = {281-325},
+   Year = {1985} }
+
+@article{Engetal1994,
+   Author = {Eng, J. K. and McCormack, A. L. and Yates, J. R.},
+   Title = {An approach to correlate tandem mass spectral data of peptides with amino acid sequences in a protein database},
+   Journal = {J Am Soc Mass Spectrom},
+   Volume = {5},
+   Number = {11},
+   Pages = {976-89},
+   Year = {1994} }
+
+@article{Ezratyetal2004,
+   Author = {Ezraty, B. and Grimaud, R. and El Hassouni, M. and Moinier, D. and Barras, F.},
+   Title = {Methionine sulfoxide reductases protect Ffh from oxidative damages in Escherichia coli},
+   Journal = {EMBO J},
+   Volume = {23},
+   Number = {8},
+   Pages = {1868-77},
+   Year = {2004} }
+
+@article{FenyoBeavis2003,
+   Author = {Fenyo, D. and Beavis, R. C.},
+   Title = {A method for assessing the statistical significance of mass spectrometry-based protein identifications using general scoring schemes},
+   Journal = {Anal Chem},
+   Volume = {75},
+   Number = {4},
+   Pages = {768-74},
+   Year = {2003} }
+
+@article{Geeretal2004,
+   Author = {Geer, L. Y. and Markey, S. P. and Kowalak, J. A. and Wagner, L. and Xu, M. and Maynard, D. M. and Yang, X. and Shi, W. and Bryant, S. H.},
+   Title = {Open mass spectrometry search algorithm},
+   Journal = {J Proteome Res},
+   Volume = {3},
+   Number = {5},
+   Pages = {958-64},
+   Year = {2004} }
+
+@article{Gordiyenkoetal2008,
+   Author = {Gordiyenko, Y. and Deroo, S. and Zhou, M. and Videler, H. and Robinson, C. V.},
+   Title = {Acetylation of L12 increases interactions in the Escherichia coli ribosomal stalk complex},
+   Journal = {J Mol Biol},
+   Volume = {380},
+   Number = {2},
+   Pages = {404-14},
+   Year = {2008} }
+
+@article{Grimaudetal2001,
+   Author = {Grimaud, R. and Ezraty, B. and Mitchell, J. K. and Lafitte, D. and Briand, C. and Derrick, P. J. and Barras, F.},
+   Title = {Repair of oxidized proteins. Identification of a new methionine sulfoxide reductase},
+   Journal = {J Biol Chem},
+   Volume = {276},
+   Number = {52},
+   Pages = {48915-20},
+   Year = {2001} }
+
+@article{Helbigetal2010,
+   Author = {Helbig, A. O. and Gauci, S. and Raijmakers, R. and van Breukelen, B. and Slijper, M. and Mohammed, S. and Heck, A. J.},
+   Title = {Profiling of N-acetylated protein termini provides in-depth insights into the N-terminal nature of the proteome},
+   Journal = {Mol Cell Proteomics},
+   Volume = {9},
+   Number = {5},
+   Pages = {928-39},
+   Year = {2010} }
+
+@article{Kimetal2014,
+   Author = {Kim, H. J. and Ha, S. and Lee, H. Y. and Lee, K. J.},
+   Title = {ROSics: Chemistry and proteomics of cysteine modifications in redox biology},
+   Journal = {Mass Spectrom Rev},
+   Year = {2014} }
+
+@article{Kimuraetal2003,
+   Author = {Kimura, Y. and Saeki, Y. and Yokosawa, H. and Polevoda, B. and Sherman, F. and Hirano, H.},
+   Title = {N-Terminal modifications of the 19S regulatory particle subunits of the yeast proteasome},
+   Journal = {Arch Biochem Biophys},
+   Volume = {409},
+   Number = {2},
+   Pages = {341-8},
+   Year = {2003} }
+
+@article{Krugetal2013,
+   Author = {Krug, K. and Carpy, A. and Behrends, G. and Matic, K. and Soares, N. C. and Macek, B.},
+   Title = {Deep coverage of the Escherichia coli proteome enables the assessment of false discovery rates in simple proteogenomic experiments},
+   Journal = {Mol Cell Proteomics},
+   Volume = {12},
+   Number = {11},
+   Pages = {3420-30},
+   Year = {2013} }
+
+@article{Liuetal2013,
+   Author = {Liu, L. and Liu, X. and Sun, W. and Li, M. and Gao, Y.},
+   Title = {Unrestrictive identification of post-translational modifications in the urine proteome without enrichment},
+   Journal = {Proteome Sci},
+   Volume = {11},
+   Number = {1},
+   Pages = {1},
+   Year = {2013} }
+
+@article{Maceketal2008,
+   Author = {Macek, B. and Gnad, F. and Soufi, B. and Kumar, C. and Olsen, J. V. and Mijakovic, I. and Mann, M.},
+   Title = {Phosphoproteome analysis of E. coli reveals evolutionary conservation of bacterial Ser/Thr/Tyr phosphorylation},
+   Journal = {Mol Cell Proteomics},
+   Volume = {7},
+   Number = {2},
+   Pages = {299-307},
+   Year = {2008} }
+
+@article{Naetal2012,
+   Author = {Na, S. and Bandeira, N. and Paek, E.},
+   Title = {Fast multi-blind modification search through tandem mass spectrometry},
+   Journal = {Mol Cell Proteomics},
+   Volume = {11},
+   Number = {4},
+   Pages = {M111 010199},
+   Year = {2012} }
+
+@article{Olsenetal2006,
+   Author = {Olsen, J. V. and Blagoev, B. and Gnad, F. and Macek, B. and Kumar, C. and Mortensen, P. and Mann, M.},
+   Title = {Global, in vivo, and site-specific phosphorylation dynamics in signaling networks},
+   Journal = {Cell},
+   Volume = {127},
+   Number = {3},
+   Pages = {635-48},
+   Year = {2006} }
+
+@article{OlsenMann2013,
+   Author = {Olsen, J. V. and Mann, M.},
+   Title = {Status of large-scale analysis of post-translational modifications by mass spectrometry},
+   Journal = {Mol Cell Proteomics},
+   Volume = {12},
+   Number = {12},
+   Pages = {3444-52},
+   Year = {2013} }
+
+@article{Pengetal2014,
+   Author = {Peng, M. and Scholten, A. and Heck, A. J. and van Breukelen, B.},
+   Title = {Identification of enriched PTM crosstalk motifs from large-scale experimental data sets},
+   Journal = {J Proteome Res},
+   Volume = {13},
+   Number = {1},
+   Pages = {249-59},
+   Year = {2014} }
+
+@article{Perkinsetal1999,
+   Author = {Perkins, D. N. and Pappin, D. J. and Creasy, D. M. and Cottrell, J. S.},
+   Title = {Probability-based protein identification by searching sequence databases using mass spectrometry data},
+   Journal = {Electrophoresis},
+   Volume = {20},
+   Number = {18},
+   Pages = {3551-67},
+   Year = {1999} }
+
+@article{Polevodaetal2003,
+   Author = {Polevoda, B. and Cardillo, T. S. and Doyle, T. C. and Bedi, G. S. and Sherman, F.},
+   Title = {Nat3p and Mdm20p are required for function of yeast NatB Nalpha-terminal acetyltransferase and of actin and tropomyosin},
+   Journal = {J Biol Chem},
+   Volume = {278},
+   Number = {33},
+   Pages = {30686-97},
+   Year = {2003} }
+
+@article{PolevodaSherman2003,
+   Author = {Polevoda, B. and Sherman, F.},
+   Title = {Composition and function of the eukaryotic N-terminal acetyltransferase subunits},
+   Journal = {Biochem Biophys Res Commun},
+   Volume = {308},
+   Number = {1},
+   Pages = {1-11},
+   Year = {2003} }
+
+@article{PolevodaSherman2003b,
+   Author = {Polevoda, B. and Sherman, F.},
+   Title = {N-terminal acetyltransferases and sequence requirements for N-terminal acetylation of eukaryotic proteins},
+   Journal = {J Mol Biol},
+   Volume = {325},
+   Number = {4},
+   Pages = {595-622},
+   Year = {2003} }
+
+@article{Sethetal2012,
+   Author = {Seth, D. and Hausladen, A. and Wang, Y. J. and Stamler, J. S.},
+   Title = {Endogenous protein S-Nitrosylation in E. coli: regulation by OxyR},
+   Journal = {Science},
+   Volume = {336},
+   Number = {6080},
+   Pages = {470-3},
+   Year = {2012} }
+
+@article{Soaresetal2013,
+   Author = {Soares, N. C. and Spat, P. and Krug, K. and Macek, B.},
+   Title = {Global dynamics of the Escherichia coli proteome and phosphoproteome during growth in minimal medium},
+   Journal = {J Proteome Res},
+   Volume = {12},
+   Number = {6},
+   Pages = {2611-21},
+   Year = {2013} }
+
+@article{Stadtman1992,
+   Author = {Stadtman, E. R.},
+   Title = {Protein oxidation and aging},
+   Journal = {Science},
+   Volume = {257},
+   Number = {5074},
+   Pages = {1220-4},
+   Year = {1992} }
+
+@article{Starheimetal2012,
+   Author = {Starheim, K. K. and Gevaert, K. and Arnesen, T.},
+   Title = {Protein N-terminal acetyltransferases: when the start matters},
+   Journal = {Trends Biochem Sci},
+   Volume = {37},
+   Number = {4},
+   Pages = {152-61},
+   Year = {2012} }
+
+@article{Tanakaetal1989,
+   Author = {Tanaka, S. and Matsushita, Y. and Yoshikawa, A. and Isono, K.},
+   Title = {Cloning and molecular characterization of the gene rimL which encodes an enzyme acetylating ribosomal protein L12 of Escherichia coli K12},
+   Journal = {Mol Gen Genet},
+   Volume = {217},
+   Number = {2-3},
+   Pages = {289-93},
+   Year = {1989} }
+
+@article{Tanneretal2005,
+   Author = {Tanner, S. and Shu, H. and Frank, A. and Wang, L. C. and Zandi, E. and Mumby, M. and Pevzner, P. A. and Bafna, V.},
+   Title = {InsPecT: identification of posttranslationally modified peptides from tandem mass spectra},
+   Journal = {Anal Chem},
+   Volume = {77},
+   Number = {14},
+   Pages = {4626-39},
+   Year = {2005} }
+
+@article{Tete-Favieretal2000,
+   Author = {Tete-Favier, F. and Cobessi, D. and Boschi-Muller, S. and Azza, S. and Branlant, G. and Aubry, A.},
+   Title = {Crystal structure of the Escherichia coli peptide methionine sulphoxide reductase at 1.9 A resolution},
+   Journal = {Structure},
+   Volume = {8},
+   Number = {11},
+   Pages = {1167-78},
+   Year = {2000} }
+
+@article{Tete-Favieretal2000b,
+   Author = {Tete-Favier, F. and Cobessi, D. and Leonard, G. A. and Azza, S. and Talfournier, F. and Boschi-Muller, S. and Branlant, G. and Aubry, A.},
+   Title = {Crystallization and preliminary X-ray diffraction studies of the peptide methionine sulfoxide reductase from Escherichia coli},
+   Journal = {Acta Crystallogr D Biol Crystallogr},
+   Volume = {56},
+   Number = {Pt 9},
+   Pages = {1194-7},
+   Year = {2000} }
+
+@article{Vogt1995,
+   Author = {Vogt, W.},
+   Title = {Oxidation of methionyl residues in proteins: tools, targets, and reversal},
+   Journal = {Free Radic Biol Med},
+   Volume = {18},
+   Number = {1},
+   Pages = {93-105},
+   Year = {1995} }
+
+@article{Yoshikawaetal1987,
+   Author = {Yoshikawa, A. and Isono, S. and Sheback, A. and Isono, K.},
+   Title = {Cloning and nucleotide sequencing of the genes rimI and rimJ which encode enzymes acetylating ribosomal proteins S18 and S5 of Escherichia coli K12},
+   Journal = {Mol Gen Genet},
+   Volume = {209},
+   Number = {3},
+   Pages = {481-8},
+   Year = {1987} }
+
+@article{ZhangWeissbach2008,
+   Author = {Zhang, X. H. and Weissbach, H.},
+   Title = {Origin and evolution of the protein-repairing enzymes methionine sulphoxide reductases},
+   Journal = {Biol Rev Camb Philos Soc},
+   Volume = {83},
+   Number = {3},
+   Pages = {249-57},
+   Year = {2008} }
+
+
 @article{Covertetal2001,
    author = {Covert, M. W. and Schilling, C. H. and Famili, I. and Edwards, J. S. and Goryanin, II and Selkov, E. and Palsson, B. {\O}.},
    title = {Metabolic modeling of microbial strains in silico},
    journal = {Trends Biochem Sci},
    volume = {26},
    pages = {179--186},
-   year = {2001}
-}
+   year = {2001} }
 
 @article{Covertetal2008,
    author = {Covert, M. W. and Xiao, N. and Chen, T. J. and Karr, J. R.},
@@ -13,16 +360,15 @@
    journal = {Bioinformatics},
    volume = {24},
    pages = {2044-50},
-   year = {2008}
-}
+   year = {2008} }
+   
 @article{Oliveiraetal2012,
    author = {Oliveira, A. P. and Ludwig, C. and Picotti, P. and Kogadeeva, M. and Aebersold, R. and Sauer, U.},
    title = {Regulation of yeast central metabolism by enzyme phosphorylation},
    journal = {Mol Syst Biol},
    volume = {8},
    pages = {623},
-   year = {2012}
-}
+   year = {2012} }
 
 @article{Barricketal2009,
    author = {Barrick, J. E. and Yu, D. S. and Yoon, S. H. and Jeong, H. and Oh, T. K. and Schneider, D. and Lenski, R. E. and Kim, J. F.},
@@ -30,8 +376,7 @@
    journal = {Nature},
    volume = {461},
    pages = {1243--1247},
-   year = {2009}
-}
+   year = {2009} }
 
 @article{OuzounisKarp2000,
    author = {Ouzounis, C. A. and Karp, P. D.},
@@ -39,6 +384,5 @@
    journal = {Genome Res},
    volume = {10},
    pages = {568--576},
-   year = {2000}
-}
+   year = {2000} }
 
