minor edits incorporating references

--- a/Manuscript/PTMsMODa.tex
+++ b/Manuscript/PTMsMODa.tex
@@ -18,8 +18,9 @@
 % Captions will be left justified
 \usepackage[labelfont=bf,labelsep=period,justification=raggedright]{caption}
 
-% Use the PLoS provided bibtex style
+% Use the ACS provided bibtex style
 \bibliographystyle{acs}
+%\bibliographystyle{plos2009}
 \usepackage{cite}
 
 % Remove brackets from numbering in List of References
@@ -59,6 +60,98 @@ A
 % keywords: post-translational modifications
 
 \section{Introduction}
+
+\cite{Stadtman1992}
+{Protein oxidation and aging}
+
+\cite{Vogt1995}
+{Oxidation of methionyl residues in proteins: tools, targets, and reversal}
+
+\cite{Grimaudetal2001}
+{Repair of oxidized proteins. Identification of a new methionine sulfoxide reductase},
+
+\cite{Tete-Favieretal2000}
+{Crystal structure of the Escherichia coli peptide methionine sulphoxide reductase at 1.9 A resolution}
+   
+\cite{Tete-Favieretal2000b}
+{Crystallization and preliminary X-ray diffraction studies of the peptide methionine sulfoxide reductase from Escherichia coli}
+   
+\cite{ZhangWeissbach2008}
+{Origin and evolution of the protein-repairing enzymes methionine sulphoxide reductases}
+   
+This fixation of MsrA is helpful \cite{Abramsetal1981}
+{Enzymatic reduction of oxidized alpha-1-proteinase inhibitor restores biological activity}
+
+\cite{Davisetal2000}
+{HIV-2 protease is inactivated after oxidation at the dimer interface and activity can be partly restored with methionine sulphoxide reductase}
+
+Mascot\cite{Perkinsetal1999}, Sequest \cite{Engetal1994}, OMSSA \cite{Geeretal2004}, X!Tandem \cite{CraigBeavis2004}, TagRecon\cite{Dasarietal2010}, MODa\cite{Naetal2012}, and Byonic \cite{Bernetal2012}
+
+Large-scale analysis of PTMs \cite{OlsenMann2013}
+
+PTM network motif \cite{Olsenetal2006}
+{Global, in vivo, and site-specific phosphorylation dynamics in signaling networks}
+
+PTM cross talk \cite{Pengetal2014}
+{Identification of enriched PTM crosstalk motifs from large-scale experimental data sets}
+
+\cite{Charbautetal2002}
+{N-terminal acetylation of ectopic recombinant proteins in Escherichia coli}
+
+Msr fixing MetSO to Met \cite{Brotetal1981}
+{Enzymatic reduction of protein-bound methionine sulfoxide}
+
+\cite{Ezratyetal2004}
+{Methionine sulfoxide reductases protect Ffh from oxidative damages in Escherichia coli}
+
+\cite{Driessenetal1985}
+{The mechanism of N-terminal acetylation of proteins}
+
+\cite{Helbigetal2010}
+{Profiling of N-acetylated protein termini provides in-depth insights into the N-terminal nature of the proteome},
+
+\cite{Gordiyenkoetal2008}
+ {Acetylation of L12 increases interactions in the Escherichia coli ribosomal stalk complex}
+ 
+\cite{Polevodaetal2003}
+{Nat3p and Mdm20p are required for function of yeast NatB Nalpha-terminal acetyltransferase and of actin and tropomyosin}
+   
+\cite{PolevodaSherman2003}
+{Composition and function of the eukaryotic N-terminal acetyltransferase subunits},
+   
+\cite{PolevodaSherman2003b}
+{N-terminal acetyltransferases and sequence requirements for N-terminal acetylation of eukaryotic proteins}
+
+\cite{Starheimetal2012}
+{Protein N-terminal acetyltransferases: when the start matters}
+
+\cite{Tanakaetal1989}
+{Cloning and molecular characterization of the gene rimL which encodes an enzyme acetylating ribosomal protein L12 of Escherichia coli K12}
+
+\cite{Yoshikawaetal1987}
+{Cloning and nucleotide sequencing of the genes rimI and rimJ which encode enzymes acetylating ribosomal proteins S18 and S5 of Escherichia coli K12}
+   
+MODa application \cite{Kimetal2014}
+{ROSics: Chemistry and proteomics of cysteine modifications in redox biology}
+
+N-terminal processing \cite{Kimuraetal2003}
+{N-Terminal modifications of the 19S regulatory particle subunits of the yeast proteasome}
+
+Mass-spec E. coli proteome \cite{Krugetal2013}
+{Deep coverage of the Escherichia coli proteome enables the assessment of false discovery rates in simple proteogenomic experiments},
+
+MODa application in urine proteomics \cite{Liuetal2013}
+{Unrestrictive identification of post-translational modifications in the urine proteome without enrichment},
+
+E. coli phosphoproteomics \cite{Maceketal2008}
+{Phosphoproteome analysis of E. coli reveals evolutionary conservation of bacterial Ser/Thr/Tyr phosphorylation}
+
+E. coli phosphoproteome dynamics \cite{Soaresetal2013}
+{Global dynamics of the Escherichia coli proteome and phosphoproteome during growth in minimal medium},
+
+E. coli nitrosylation \cite{Sethetal2012}
+{Endogenous protein S-Nitrosylation in E. coli: regulation by OxyR},
+
 
 Research into 
 
@@ -143,9 +236,9 @@ Conceived and designed the experiments: V.S., C.O.W and E.M.M. Performed the exp
 This project was funded by ARO Grant W911NF-12-1-0390. We thank members of the Colin Brown for helpful discussions on post-translational modifications. The Bioinformatics Consulting Group and the Texas Advanced Computing Center (TACC) at UT provided high-performance computing resources. 
 
 
-%\section{References} (Automatically References title is added)
+\section{References}
 % Bibliography tex filename
-\bibliography{MODaPTMsBibliography}
+\bibliography{PTMsMODaBibliography}
 
 \newpage
 
