fix references format

--- a/Manuscript/PTMsMODa.tex
+++ b/Manuscript/PTMsMODa.tex
@@ -19,8 +19,8 @@
 \usepackage[labelfont=bf,labelsep=period,justification=raggedright]{caption}
 
 % Use the ACS provided bibtex style
+%\bibliographystyle{plain}
 \bibliographystyle{acs}
-%\bibliographystyle{plos2009}
 \usepackage{cite}
 
 % Remove brackets from numbering in List of References
@@ -197,6 +197,9 @@ To see if the results and trends of the PTMs over time holds, we changed the MOD
 \section{Discussion}
 
 We have developed
+
+Such analysis can also be integrated in whole-cell models such as \cite{Covertetal2008}
+{Integrating metabolic, transcriptional regulatory and signal transduction models in \emph{Escherichia coli}},
 
 
 \section{Conclusions}
