more edits (discussion)

--- a/Manuscript/PTMsMODa.tex
+++ b/Manuscript/PTMsMODa.tex
@@ -203,14 +203,32 @@ To see if the results and trends of the PTMs over time holds, we changed the MOD
 \section{Discussion}
 
 Limitations:
-Talk about PTM enrichment step.
+Large-scale PTM analysis is still at its infancy because of both experimental enrichment techniques of PTMs as well as the computational search algorithms that have to look at different combinations to identify the PTMs. Here we used MODa, a naive based search algorithm on E. coli proteome data obtained under glucose-limiting conditions. Our analysis showed that 1/3rd of the peptide spectral matches found are modified. We also saw a decrease in oxidation levels from exponential to stationary phase, with sulfoxide reductases playing a role in fixing Methionine oxide back to methionine. n-term acetylations are frequent, with serine n-term acetylation happening 75\% of all n-term acetylations, all the times on the 2nd amino acids of the protein, after methionine excision. Phosphorylation increased from exponential to stationary phases, while carboxylations and nitrosylations remained constant throughout the time course of E. coli growth. Na and K adducts seem to happen 3-4\% of the time. Finally, a novel serine modification i.e., phosphogluocnylation of serine seems to happen on ribosomal protein S6 frequently.
 
-Relative quantitation and stoichiometry.
+Most of the peptide identification search algorithms required a list of PTMs to search for and usually this list is limited to 6. However databases like UNIMOD, RESID have listed at least 400 known PTMs present. So, we used a naive based search algorithm that outputs mass-shifts, instead of the PTMs in the peptide-spectral match. Then we use UNIMOD to identify the PTM that matches the mass-shift. However we did not try and match all the mass-shifts, but investigated in detail the frequent mass-shifts identified by MODa. One limitation is we used the default mass-range search between -200 and 200 Da and one other search with -100 and 300 Da range. So, we miss out on larger PTMs i.e., polyubiquitination tails etc. This resulted in analysis of +1 Da mass-shift (C13 peak detection), oxidation, acetylation, Na and K adducts, along with some widely studied PTMs in phosphorylation, carboxylation and nitrosylation. This program is previously used for similar large-scale analysis with urinary proteomics and they identified novel PTMs. However the study used 2 programs and considered the overlap of PTMs as highly confident. Instead here, our focus is not to identify highly-confident PTMs later used as biomarkers, but to get a wider coverage at a lower FDR of 1\% and look at the time course or evolution of these PTMs during the entire 2 weeks of E. coli growth.
 
-We have developed
+To avoid false positives and as recommended by the original MODa paper, we ran search engine looking for only 1 possible modification on the peptide. Generally the PTMs are validated by a 2nd round of identifying highly confident hits. This is usually done by using programs like Ascore etc. However here, we did not do any 2nd round of validating peptides. Also, we looked at the global level of PTMs, instead of counting which peptide and hence protein is modified. We did not do any PTM level quantitation or try to undestand the specific PTM stoichiometry, as these require sophisticated experimental instrumentation, protocol and the algorithms to characterize the PTMs associated with proteins.
 
-Such analysis can also be integrated in whole-cell models such as \cite{Covertetal2008}
-{Integrating metabolic, transcriptional regulatory and signal transduction models in \emph{Escherichia coli}},
+Nice review article on E. coli proteomics by different technologies including MS can be found here:
+Cite this paper: The Escherichia coli Proteome: Past, Present, and Future Prospects†
+Mee-Jung Han1 and Sang Yup Lee1,2,*
+
+Directly taken from the above paper for my future analyses: For example, SspA expression increased with decreasing growth rate and was induced by glucose, nitrogen, phosphate, or amino acid starvation. Furthermore, the proteome profiles during the exponential growth phase showed that the expression levels of at least 11 proteins were altered in sspA mutant strains (314). These findings indicate that SspA acts as a transcription factor and is essential for starvation stress-induced tolerance (e.g., stationary phase) in E. coli.
+
+Copied from the same paper At the onset of glucose starvation, cyclic AMP and its receptor protein (cAMP-CRP) were found to play important roles in the expression of a number of genes. An early 2-DE study identified five glucose-responsive outer membrane proteins (four upregulated and one downregulated) (186). A comparison with membrane proteins from mutant strains revealed that two of the upregulated proteins were the receptors for lambda and T6, and coelectrophoresis of the outer membrane fraction identified the downregulated protein as OmpA. The glucose starvation stimulon was further examined using 2-DE followed by comparison to the E. coli gene-protein database (218). Members of this stimulon were found to include enzymes of the Embden-Meyerhof-Parnas pathway, phosphotransacetylase (Pta) and acetate kinase (AckA) in the acetic acid pathway, and formate transacetylase. Trichloroacetic acid cycle enzymes were repressed, whereas enzymes involved in acetate and formate production and the Embden-Meyerhof-Parnas pathway were induced. These modulations suggest that a glucose-starved cell increases the relative flow of carbon through the Pta-AckA pathway. Indeed, pta and pta-ackA mutants were found to be impaired in their abilities to survive glucose starvation, indicating that the capacity to synthesize acetyl phosphate, an intermediate of this pathway, is indispensable for glucose-starved cells. The pta mutant failed to induce several proteins of the glucose starvation stimulon. More recently, proteome studies revealed that glucose limitation upregulates the levels of proteins such as AceA, AldA, ArgT, AtpA, DppA, GatY, LivJ, MalE, MglB, RbsB, UgpB, and YdcS (311). Of these, ArgT, DppA, LivJ, MalE, MglB, RbsB, UgpB, and YdcS are periplasmic binding proteins of the ABC transporters, suggesting that in addition to the central metabolism proteins, periplasmic binding proteins are involved in the carbohydrate and amino acid uptakes that are important during glucose limitation.
+
+Also, A functional relA gene is required for sspA to affect protein synthesis. (taken from another paper)
+Interesting to find PTMs on these proteins?
+
+Total proteins could be the same - should I plot the total number of proteins over time? absolute protein abundances calculated from APEX protocol?
+
+Most of the times, proteins act in complexes to perform a specific function. In such process, 1 or few amino acids of a protein interact with other residues of another protein, generally through the PTMs. So, large-scale analysis of PTMs such as this work would help us better understand the fine granularity at PTM level that is responsible for a particular mechanism, such as multiple phosphorylations in the case of signalling cascades.
+
+Mass-spec analysis of human soluble protein complexes has revealed a large number of conserved complexes along with thousands of protein-protein interactions. Large-scale analysis of PTMs on these kinds of proteomics data would help to understand these interactions at PTM level. Such annotations could then be integrated with databases such as NCBI CDD
+Across diverse species (cite Emili/Marcotte collaboration cell papers) and talk about PTM annotation in databases like CDD? Cite the paper on conservation of phosphorylations etc on CDDs, but extend to other PTMs?
+
+Current whole-cell models \cite{Covertetal2008} are trying to integrate diverse kinds of OMICS data i.e., transcriptomics, proteomics not only to refine the existing models but also get the response of the models close to the experimental metabolic flux measurements. Here, we argue that including the modification information (i.e., number of modified proteins to that of the unmodified version) will improve the existing methodologies.
+
 
 
 \section{Conclusions}
