--- a/Manuscript/PTMsMODa.tex
+++ b/Manuscript/PTMsMODa.tex
@@ -277,65 +277,59 @@ This project was funded by ARO Grant W911NF-12-1-0390. We thank members of the C
 \section*{Figures}
 
 \begin{figure}[!ht]
-%\centerline{\includegraphics[width=4in]{Figures/flowchart_new.pdf}}
+\centerline{\includegraphics[width=4in]{Figures/Paper_Ecoli_PTM_Modified_Figure1.pdf}}
 \caption{\label{fig:flowchart}\textbf{Flowchart.} We use .
 }
 \end{figure}
 
 \clearpage
 \begin{figure}[!ht]
-%\centerline{\includegraphics[width=5.5in]{Figures/combinedContaminationTrainingdata.pdf}}
+\centerline{\includegraphics[width=5.5in]{Figures/Paper_Ecoli_PTMs.pdf}}
 \caption{\label{fig:misclassification}\textbf{Misclassification .} For j.}
 \end{figure}
 
 \clearpage
 \begin{figure}[p]
-%\centerline{\includegraphics[width=5in]{Figures/heatmap.pdf}}
+\centerline{\includegraphics[width=5in]{Figures/Acetylation_AAs.pdf}}
 \caption{\label{fig:heat_map}\textbf{Probability .} For .}
 \end{figure}
 
 \clearpage
 \begin{figure}[p]
-%\centerline{\includegraphics[width=5in]{Figures/carbon/carbon_grid.pdf}}
+\centerline{\includegraphics[width=5in]{Figures/Phosphorylations.pdf}}
 \caption{\label{fig:carbon_network}\textbf{Predictive .} Reactions .}
 \end{figure}
 
 \clearpage
 \begin{figure}[p]
-%\centerline{\includegraphics[width=5in]{Figures/nitrogen/nitrogen_grid.pdf}}
+\centerline{\includegraphics[width=5in]{Figures/Nitrosylations.pdf}}
+\caption{\label{fig:nitrogen_network}\textbf{Predictive .} Reactions .}
+\end{figure}
+
+\clearpage
+\begin{figure}[p]
+\centerline{\includegraphics[width=5in]{Figures/Paper_Ecoli_Oxidations.pdf}}
 \caption{\label{fig:nitrogen_network}\textbf{Predictive .} Reactions .}
 \end{figure}
 
 
-\clearpage
 \section*{Supplementary Figures}
-%\centerline{\includegraphics[width=8in]{Figures/NitrogenLimiting.pdf}}
+\centerline{\includegraphics[width=8in]{Figures/PTM_Modified.pdf}}
 \customlabel{fig:NitrogenLimiting}{S1}
 \textbf{Figure S1: Scatter .} We .
 
-\clearpage
-%\centerline{\includegraphics[width=8in]{Figures/CarbonLimiting.pdf}}
-\customlabel{fig:CarbonLimiting}{S2}
-\noindent \textbf{Figure S2: .} We .
-
-\clearpage
-%\centerline{\includegraphics[width=5in]{Figures/heatmap_10CN_Biomass_Minimization.pdf}}
-\customlabel{fig:BiomassMin}{S3}
-\noindent \textbf{Figure S3: .} For .
-\clearpage
-
-\section*{Supplementary Tables}
-\customlabel{tab:predictive_carbon_sources}{S1}
-\textbf{Table S1: .} These .
-\bigskip
+%\section*{Supplementary Tables}
+%\customlabel{tab:predictive_carbon_sources}{S1}
+%\textbf{Table S1: .} These .
+%\bigskip
 
 %\noindent File: \texttt{SupportingInfo/CarbonSources.xlsx}\\
 %Available in github repository \texttt{https://github.com/clauswilke/Ecoli\_FBA\_input\_prediction}
 
-\bigskip
-\customlabel{tab:predictive_nitrogen_sources}{S2}
-\noindent \textbf{Table S2: .} These .
-\bigskip
+%\bigskip
+%\customlabel{tab:predictive_nitrogen_sources}{S2}
+%\noindent \textbf{Table S2: .} These .
+%\bigskip
 
 %\noindent File: \texttt{SupportingInfo/NitrogenSources.xlsx}\\
 %Available in github repository \texttt{https://github.com/clauswilke/Ecoli\_FBA\_input\_prediction}
