--- a/Manuscript/PTMsMODa.tex
+++ b/Manuscript/PTMsMODa.tex
@@ -284,7 +284,7 @@ This project was funded by ARO Grant W911NF-12-1-0390. We thank members of the C
 
 \clearpage
 \begin{figure}[!ht]
-\centerline{\includegraphics[width=5.5in]{Figures/Paper_Ecoli_PTMs.pdf}}
+\centerline{\includegraphics[width=8in]{Figures/PTMdalton.pdf}}
 \caption{\label{fig:misclassification}\textbf{Misclassification .} For j.}
 \end{figure}
 
@@ -300,24 +300,40 @@ This project was funded by ARO Grant W911NF-12-1-0390. We thank members of the C
 \caption{\label{fig:carbon_network}\textbf{Predictive .} Reactions .}
 \end{figure}
 
+
 \clearpage
 \begin{figure}[p]
-\centerline{\includegraphics[width=5in]{Figures/Nitrosylations.pdf}}
+\centerline{\includegraphics[width=8in]{Figures/Oxidations.pdf}}
 \caption{\label{fig:nitrogen_network}\textbf{Predictive .} Reactions .}
 \end{figure}
 
 \clearpage
 \begin{figure}[p]
-\centerline{\includegraphics[width=5in]{Figures/Paper_Ecoli_Oxidations.pdf}}
+\centerline{\includegraphics[width=8in]{Figures/MsrAB_mRNA_protein.pdf}}
 \caption{\label{fig:nitrogen_network}\textbf{Predictive .} Reactions .}
 \end{figure}
 
-
+\bigskip
 \section*{Supplementary Figures}
-\centerline{\includegraphics[width=8in]{Figures/PTM_Modified.pdf}}
-\customlabel{fig:NitrogenLimiting}{S1}
+\clearpage
+\centerline{\includegraphics[width=5in]{Figures/PTM_Modified.pdf}}
+\customlabel{fig:GrowthCurve}{S1}
 \textbf{Figure S1: Scatter .} We .
 
+\clearpage
+\centerline{\includegraphics[width=5in]{Figures/Nitrosylations.pdf}}
+\customlabel{fig:NitrosylationFig}{S2}
+\textbf{Figure S2: Scatter .} We .
+
+\clearpage
+\centerline{\includegraphics[width=5in]{Figures/Carboxylations.pdf}}
+\customlabel{fig:CarboxylationFig}{S3}
+\textbf{Figure S3: Scatter .} We .
+
+\clearpage
+\centerline{\includegraphics[width=8in]{Figures/NaKAdducts.pdf}}
+\customlabel{fig:CarboxylationFig}{S4}
+\textbf{Figure S4: Scatter .} We .
 %\section*{Supplementary Tables}
 %\customlabel{tab:predictive_carbon_sources}{S1}
 %\textbf{Table S1: .} These .
